<resources>
    <string name="app_name">AHC App</string>
    <string name="name">MYF - Aswan Heart Center</string>
    <string name="verify_content_message">Verify it\'s you</string>
    <string name="phone_title">Phone Number</string>
    <string name="verify_title">Verify</string>
    <string name="verify_code_title">Verify Code</string>
    <string name="send_code_title">Send Code</string>
    <string name="select_country_title">Select Country</string>
    <string name="offline_message">You\'r Offline</string>
    <string name="wrong_phone_message">Wrong phone format</string>
    <string name="wrong_code_message">Wrong Code</string>
    <string name="select_country_message">Please select Country</string>
    <string name="enter_phone_message">Enter patient phone number</string>
    <string name="succeed_verify_message">Success\nYour Phone Number is Verified</string>
    <string name="other_phone_title">Other Phone</string>
    <string name="phone_content_label">Phone Number label</string>
    <string name="other_phone_message">Please Enter another phone number</string>
    <string name="success_label">Success label</string>
    <string name="next_title">Next</string>
    <string name="start_title">Let\'s Start</string>
    <string name="select_language_title">Select Language - إختر لغه</string>
    <string name="arabic_title">العربيه</string>
    <string name="english_title">English</string>
    <string name="welcome_title">Welcome to MYF App</string>
    <string name="welcome_message">An application to make the communication with patients easier.</string>

    <string name="register_patient_details">Register patient details</string>
    <string name="patient_name">Patient name</string>
    <string name="national_id">National id</string>
    <string name="upload_national_id_title">Upload national id image</string>
    <string name="invalid_patient_name">Invalid Patient Name</string>
    <string name="invalid_national_id">Invalid National Id</string>

    <string name="send_reports_title">Send a copy of Medical reports</string>
    <string name="send_reports_message">Include a copy of the ultrasound and a catheterization report, if any. Fluidity analysis, if any</string>
    <string name="submit_title">Submit</string>
    <string name="upload_files_title">Upload Files</string>
    <string name="upload_image_title">Upload Image</string>
    <string name="upload_file_title">Upload File</string>
    <string name="reports_view_message">Your reports appears here</string>
    <string name="total_size_value">of 20MB</string>
    <string name="file_size_message">File bigger than 20MB</string>
    <string name="report_content_label">Report label</string>
    <string name="cancel_title">Cancel</string>
    <string name="delete_title">Delete</string>
    <string name="delete_report_message">Are you sure you want to delete this file?</string>
    <string name="file_exist_message">File already uploaded</string>
    <string name="used_storage">used storage</string>
    <string name="register_title">Register</string>
    <string name="log_in_title">Log in</string>
    <string name="review_request_title">Review your request</string>
    <string name="verify_log_in_message">We have sent you a verification code to your registered number.\n\n Your last two digits is</string>
    <string name="upload_id_photo_title">Upload your ID photo</string>
    <string name="edit_report_label">Edit report</string>
    <string name="verified_title">Verified</string>
    <string name="files_uploaded_message">you have uploaded</string>
    <string name="files_title">files</string>
    <string name="submit_request_title">Submit Request</string>
    <string name="name_id_info_title">Name &amp; Id</string>
    <string name="contact_info_title">Contact Info</string>
    <string name="reports_diagnosis_info_title">Reports &amp; Diagnosis</string>
    <string name="diagnosis_description_title">Diagnosis description</string>
    <string name="edit_name_label">Edit name label</string>
    <string name="edit_reports_label">Edit reports label</string>
    <string name="diagnosis_title">Write a Diagnosis</string>
    <string name="Edit_report_doc_title">Edit Document</string>
    <string name="add_note_title">Add Note</string>
    <string name="note_title">Note</string>
    <string name="add_title">Add</string>
    <string name="delete_doc_title">Delete Document</string>
</resources>