<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="8dp"
    app:cardBackgroundColor="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/success_label"
            android:src="@drawable/ic_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/success_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/succeed_verify_message"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/other_phone_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:layout_marginTop="32dp"
            android:text="@string/other_phone_message"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="@+id/success_title_tv"
            app:layout_constraintStart_toStartOf="@+id/success_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/success_title_tv" />


        <ImageView
            android:id="@+id/success_phone_label"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_phone"
            android:contentDescription="@string/phone_content_label"
            app:layout_constraintBottom_toBottomOf="@+id/other_phone_il"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/other_phone_il" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/other_phone_il"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/other_phone_title"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/success_phone_label"
            app:layout_constraintTop_toBottomOf="@+id/other_phone_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/other_phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp"
            android:elevation="4dp"
            android:minHeight="56dp"
            app:layout_constraintVertical_bias="0"
            android:text="@string/next_title"
            android:textAllCaps="false"
            app:cornerRadius="8dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/other_phone_il" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>