<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnBackground">

    <TextView
        android:id="@+id/welcome_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:text="@string/welcome_message"
        app:layout_constraintEnd_toEndOf="@+id/welcome_title_tv"
        app:layout_constraintStart_toStartOf="@+id/welcome_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title_tv" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/start_button"
            app:layout_constraintEnd_toEndOf="@+id/start_button"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="@+id/start_button">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/select_language_title"
                    android:src="@drawable/ic_language"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_gravity="start|center"
                    android:text="@string/select_language_title"/>
            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/arabic_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:minHeight="@dimen/button_min_height"
                app:cornerRadius="@dimen/button_normal_rad"
                android:elevation="@dimen/button_normal_elevation"
                android:textAllCaps="false"
                android:textColor="?android:textColor"
                android:text="@string/arabic_title"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                app:strokeColor="@color/purple_500" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/english_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:minHeight="@dimen/button_min_height"
                app:cornerRadius="@dimen/button_normal_rad"
                android:elevation="@dimen/button_normal_elevation"
                android:textColor="?android:textColor"
                android:textAllCaps="false"
                android:text="@string/english_title"
                app:strokeWidth="2dp"
                tools:textColor="@color/purple_500"
                tools:strokeColor="@color/purple_200"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                app:strokeColor="@color/purple_500" />
        </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_min_height"
        android:layout_margin="48dp"
        android:textAllCaps="false"
        android:text="@string/start_title"
        android:textColor="@color/black_light"
        android:elevation="@dimen/button_normal_elevation"
        app:cornerRadius="@dimen/button_normal_rad"
        android:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>