<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnBackground"
    tools:context=".ui.registration.reports.UploadReportsScreen">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/send_reports_title"
        android:id="@+id/reports_title_tv"/>

    <TextView
        android:id="@+id/reports_message_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorControlNormal"
        android:text="@string/send_reports_message"
        app:layout_constraintEnd_toEndOf="@+id/reports_title_tv"
        app:layout_constraintStart_toStartOf="@+id/reports_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/reports_title_tv" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10/20 MB"
        android:textAppearance="?attr/textAppearanceOverline"
        app:layout_constraintBottom_toTopOf="@+id/reports_size_progress"
        app:layout_constraintEnd_toEndOf="@+id/reports_size_progress" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:progress="50"
        android:max="100"
        app:indicatorColor="?attr/colorSecondary"
        android:id="@+id/reports_size_progress"
        app:layout_constraintTop_toBottomOf="@+id/reports_message_tv" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reports_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/upload_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        tools:itemCount="6"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/reports_size_progress"
        tools:listitem="@layout/report_list_item" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:minHeight="56dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/upload_file_title"
        android:textAllCaps="false"
        app:strokeWidth="2dp"
        android:textColor="?attr/colorOnSurface"
        app:strokeColor="@color/purple_200"
        app:cornerRadius="8dp"
        app:backgroundTint="?attr/colorSurface"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="@+id/submit_button"
        app:layout_constraintStart_toStartOf="@+id/submit_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:text="@string/submit_title"
        android:textAllCaps="false"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        app:cornerRadius="8dp"
        app:backgroundTint="?attr/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>