<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnBackground"
    tools:context=".ui.registration.createPatient.CreatePatientScreen">

    <data>

        <import type="android.view.View" />

        <variable
            name="patientName"
            type="String" />

        <variable
            name="nationalId"
            type="String" />

        <variable
            name="viewModel"
            type="org.myf.ahc.ui.registration.createPatient.CreatePatientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register_patient_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/register_patient_details"
            android:textAlignment="viewStart"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patient_name_il"
            android:layout_width="0dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/patient_name"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_patient_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patient_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/national_id_il"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/national_id"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_name_il">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/national_id_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/split_cv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:background="@color/white_dark"
            app:strokeColor="@color/black_light"
            app:strokeWidth="0.01dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/national_id_il"
            app:layout_constraintBottom_toTopOf="@+id/next_button">

            <ImageView
                android:id="@+id/national_id_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintWidth_max="wrap"
                android:src="@drawable/ic_image_preview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="32dp"
            android:minHeight="56dp"
            android:text="@string/next_title"
            android:textAllCaps="false"
            app:backgroundTint="?attr/colorSecondary"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>